test/extended/testdata/router/hello-openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test
spec:
  host: ""
  to:
    kind: Service
    name: hello-openshift
  ports:
    - targetPort: 8080
