test/extended/testdata/router/hello-openshift-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
spec:
  selector:
    app: hello-openshift
  ports:
    - port: 8080
