test/extended/testdata/router/reencrypt-serving-cert.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Pod
  metadata:
    name: serving-cert
    labels:
      app: serving-cert
  spec:
    containers:
    - image: registry.k8s.io/e2e-test-images/nginx:1.27.0-2
      name: serve
      command:
        - /usr/sbin/nginx
      args:
        - -c
        - /etc/nginx/nginx.conf
      ports:
      - containerPort: 8443
        protocol: TCP
      volumeMounts:
      - name: cert
        mountPath: /etc/serving-cert
      - name: conf
        mountPath: /etc/nginx
      - name: tmp
        mountPath: /var/cache/nginx
      - name: tmp2
        mountPath: /var/run
    volumes:
    - name: conf
      configMap:
        name: serving-cert
    - name: cert
      secret:
        secretName: serving-cert
    - name: tmp
      emptyDir: {}
    - name: tmp2
      emptyDir: {}
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: serving-cert
  data:
    nginx.conf: |
      daemon off;
      events { }
      http {
        server {
            listen 8443 ssl;
            listen [::]:8443 ipv6only=on ssl;
            ssl_certificate     /etc/serving-cert/tls.crt;
            ssl_certificate_key    /etc/serving-cert/tls.key;
            server_name  "*.svc";
            location / {
                root   /usr/share/nginx/html;
                index  index.html index.htm;
            }
            error_page   500 502 503 504  /50x.html;
            location = /50x.html {
                root   /usr/share/nginx/html;
            }
        }
      }
- apiVersion: v1
  kind: Service
  metadata:
    name: serving-cert
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: serving-cert
  spec:
    selector:
      app: serving-cert
    ports:
      - port: 443
        name: https
        targetPort: 8443
        protocol: TCP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: serving-cert
  spec:
    tls:
      termination: Reencrypt
      # no destination CA certificate needed
    to:
      kind: Service
      name: serving-cert
