test/extended/testdata/router/router-grpc-interop.yaml
apiVersion: template.openshift.io/v1
kind: Template
parameters:
- name: IMAGE
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: grpc-interop
    annotations:
      service.beta.openshift.io/serving-cert-secret-name: service-cert-grpc-interop
  spec:
    selector:
      app: grpc-interop
    ports:
    - appProtocol: h2c
      name: h2c
      port: 1110
      protocol: TCP
      targetPort: 1110
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
- apiVersion: v1
  kind: Pod
  metadata:
    name: grpc-interop
    labels:
      app: grpc-interop
  spec:
    containers:
    - image: ${IMAGE}
      name: server
      command: ["ingress-operator", "serve-grpc-test-server"]
      ports:
      - containerPort: 1110
        name: h2c
        protocol: TCP
      - containerPort: 8443
        name: https
        protocol: TCP
      volumeMounts:
      - mountPath: /etc/serving-cert
        name: cert
      readinessProbe:
        failureThreshold: 3
        tcpSocket:
          port: 8443
        initialDelaySeconds: 10
        periodSeconds: 30
        successThreshold: 1
      livenessProbe:
        failureThreshold: 3
        tcpSocket:
          port: 8443
        initialDelaySeconds: 10
        periodSeconds: 30
        successThreshold: 1
    volumes:
    - name: cert
      secret:
        secretName: service-cert-grpc-interop
