test/extended/testdata/router/router-h2shard.yaml
apiVersion: template.openshift.io/v1
kind: Template
parameters:
- name: NAME
- name: DOMAIN
- name: NAMESPACE
objects:
- apiVersion: operator.openshift.io/v1
  kind: IngressController
  metadata:
    name: ${NAME}
    namespace: ${NAMESPACE}
    annotations:
      ingress.operator.openshift.io/default-enable-http2: "true"
  spec:
    replicas: 1
    domain: ${DOMAIN}
    endpointPublishingStrategy:
      type: LoadBalancerService
    nodePlacement:
      nodeSelector:
        matchLabels:
          node-role.kubernetes.io/worker: ""
    routeSelector:
      matchLabels:
        type: ${NAME}
