test/extended/testdata/router/router-h2spec.yaml
apiVersion: template.openshift.io/v1
kind: Template
parameters:
- name: HAPROXY_IMAGE
- name: H2SPEC_IMAGE
objects:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: h2spec-haproxy-config
  data:
    haproxy.config: |
      global
        daemon
        log stdout local0
        nbthread 4
        tune.ssl.default-dh-param 2048
        tune.ssl.capture-cipherlist-size 1
      defaults
        mode http
        timeout connect 5s
        timeout client 30s
        timeout client-fin 1s
        timeout server 30s
        timeout server-fin 1s
        timeout http-request 10s
        timeout http-keep-alive 300s
        option logasap
        option http-buffer-request
        log-format "frontend:%f/%H/%fi:%fp GMT:%T\ body:%[capture.req.hdr(0)]\  request:%r"
      frontend fe_proxy_tls
        option http-buffer-request
        declare capture request len 40000
        http-request capture req.body id 0
        log global
        bind *:8443 ssl crt /tmp/bundle.pem alpn h2
        default_backend haproxy-availability-ok
      backend haproxy-availability-ok
        errorfile 503 /etc/haproxy/errorfile
        http-request deny deny_status 200
    errorfile: |
      HTTP/1.1 200 OK
      Content-Length: 8192
      Cache-Control: max-age=28800
      Content-Type: text/plain

      2wWvUP5ISuTTzmzf27uZ/hGEVQMowYJYgDBZPGj3VY9XEHtdiCILqnw6oMvB95lUtNDPfVh+sEpM
[...]
      BFNBRELPe53ZdLKWpf2Sr96vRPRNw
- apiVersion: v1
  kind: Pod
  metadata:
    name: h2spec-haproxy
    labels:
      app: h2spec-haproxy
  spec:
    containers:
    - image: ${HAPROXY_IMAGE}
      name: haproxy
      command: ["/bin/bash", "-c" ]
      args:
        - set -e;
          cat /etc/serving-cert/tls.key /etc/serving-cert/tls.crt > /tmp/bundle.pem;
          haproxy -f /etc/haproxy/haproxy.config -db
      ports:
      - containerPort: 8443
        protocol: TCP
      readinessProbe:
        failureThreshold: 3
        tcpSocket:
          port: 8443
        initialDelaySeconds: 10
        periodSeconds: 30
        successThreshold: 1
      livenessProbe:
        failureThreshold: 3
        tcpSocket:
          port: 8443
        initialDelaySeconds: 10
        periodSeconds: 30
        successThreshold: 1
      securityContext:
        allowPrivilegeEscalation: true
      volumeMounts:
      - mountPath: /etc/serving-cert
        name: cert
      - mountPath: /etc/haproxy
        name: config
    volumes:
    - name: config
      configMap:
        name: h2spec-haproxy-config
    - name: cert
      secret:
        secretName: serving-cert-h2spec
- apiVersion: v1
  kind: Service
  metadata:
    name: h2spec-haproxy
    annotations:
      service.beta.openshift.io/serving-cert-secret-name: serving-cert-h2spec
  spec:
    selector:
      app: h2spec-haproxy
    ports:
      - port: 8443
        name: https
        targetPort: 8443
        protocol: TCP
- apiVersion: v1
  kind: Pod
  metadata:
    name: h2spec
    labels:
      app: h2spec
  spec:
    containers:
    - name: h2spec
      image: ${H2SPEC_IMAGE}
      command: ["sleep"]
      args: ["infinity"]
