test/extended/testdata/router/router-http2-routes.yaml
apiVersion: template.openshift.io/v1
kind: Template
parameters:
- name: TLS_KEY
- name: TLS_CRT
- name: DOMAIN
objects:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: http2-default-cert-edge
  spec:
    host: http2-default-cert-edge.${DOMAIN}
    port:
      targetPort: 8080
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    to:
      kind: Service
      name: http2
      weight: 100
    wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: http2-default-cert-reencrypt
  spec:
    host: http2-default-cert-reencrypt.${DOMAIN}
    port:
      targetPort: 8443
    tls:
      termination: reencrypt
      insecureEdgeTerminationPolicy: Redirect
    to:
      kind: Service
      name: http2
      weight: 100
    wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: http2-custom-cert-edge
  spec:
    host: http2-custom-cert-edge.${DOMAIN}
    port:
      targetPort: 8080
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN EC PRIVATE KEY-----
        MHcCAQEEIAW+ecg2cZR47ItbI898N3nJduh9UJNv+b0cOwH/Z1BEoAoGCCqGSM49
[...]
        4UYpwAW/t63qBx3jRhPgkUxh5saJP9Qu5Q==
        -----END EC PRIVATE KEY-----
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIBgTCCASagAwIBAgIRALutWdExjxX8fWljW+lcYbswCgYIKoZIzj0EAwIwJDEQ
[...]
        PaUMdqg=
        -----END CERTIFICATE-----
    to:
      kind: Service
      name: http2
      weight: 100
    wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: http2-custom-cert-reencrypt
  spec:
    host: http2-custom-cert-reencrypt.${DOMAIN}
    port:
      targetPort: 8443
    tls:
      termination: reencrypt
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN EC PRIVATE KEY-----
        MHcCAQEEIBk5BXzGWoGiRD9726TFPcvKHuwNVBUfPBlbF5fISRFPoAoGCCqGSM49
[...]
        MQy0a+FkvZSyTA2y8a8/IMM1f2MQC6bATg==
        -----END EC PRIVATE KEY-----
      certificate: ${TLS_CRT}
    to:
      kind: Service
      name: http2
      weight: 100
    wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: http2-passthrough
  spec:
    host: http2-passthrough.${DOMAIN}
    port:
      targetPort: 8443
    tls:
      termination: passthrough
      insecureEdgeTerminationPolicy: Redirect
    to:
      kind: Service
      name: http2
      weight: 100
    wildcardPolicy: None
