test/extended/testdata/router/router-idle.yaml
apiVersion: template.openshift.io/v1
kind: Template
objects:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: idle-test
    labels:
      app: idle-test
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: idle-test
- apiVersion: v1
  kind: Service
  metadata:
    name: idle-test
    labels:
      app: idle-test
  spec:
    selector:
      app: idle-test
    ports:
      - port: 8080
        name: 8080-http
        targetPort: 8080
        protocol: TCP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: idle-test
  spec:
    replicas: 1
    template:
      metadata:
        name: idle-test
        labels:
          app: idle-test
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
          name: idle-test
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          command:
            - /usr/bin/socat
            - TCP4-LISTEN:8080,reuseaddr,fork
            - EXEC:'/bin/bash -c \"printf \\\"HTTP/1.0 200 OK\r\n\r\n\\\"; sed -e \\\"/^\r/q\\\"\"'
          ports:
          - containerPort: 8080
            protocol: TCP
    selector:
      matchLabels:
        app: idle-test
