test/extended/testdata/router/router-override-domains.yaml
apiVersion: template.openshift.io/v1
kind: Template
parameters:
- name: IMAGE
  value: openshift/origin-haproxy-router:latest
- name: DEFAULT_CERTIFICATE
  value: |-
    -----BEGIN CERTIFICATE-----
    MIIDuTCCAqGgAwIBAgIUZYD30F0sJl7HqxE7gAequtxk/HowDQYJKoZIhvcNAQEL
[...]
    -----END CERTIFICATE-----
    -----BEGIN PRIVATE KEY-----
    MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDvVbuB0Scz42bj
[...]
    bk65iLoLrUSkxMDi46qTAs5K
    -----END PRIVATE KEY-----
objects:

# a router that overrides domains
- apiVersion: v1
  kind: Pod
  metadata:
    name: router-override-domains
    labels:
      test: router-override-domains
  spec:
    terminationGracePeriodSeconds: 1
    containers:
    - name: router
      image: ${IMAGE}
      imagePullPolicy: IfNotPresent
      env:
      - name: POD_NAMESPACE
        valueFrom:
          fieldRef:
            fieldPath: metadata.namespace
      - name: DEFAULT_CERTIFICATE
        value: |-
          ${DEFAULT_CERTIFICATE}
      args:
      - "--name=test-override-domains"
      - "--namespace=$(POD_NAMESPACE)"
      - "-v=4"
      - "--override-domains=null.ptr,void.str"
      - "--hostname-template=${name}-${namespace}.apps.veto.test"
      - "--stats-port=1936"
      - "--metrics-type=haproxy"
      hostNetwork: false
      ports:
      - containerPort: 80
      - containerPort: 443
      - containerPort: 1936
        name: stats
        protocol: TCP
      readinessProbe:
        initialDelaySeconds: 10
        httpGet:
          path: /healthz/ready
          port: 1936
    serviceAccountName: default
