test/extended/testdata/router/router-scoped.yaml
apiVersion: v1
kind: Template
parameters:
- name: IMAGE
  value: openshift/origin-haproxy-router:latest
- name: ROUTER_NAME
  value: "test-scoped"
- name: DEFAULT_CERTIFICATE
  value: |-
    -----BEGIN CERTIFICATE-----
    MIIDuTCCAqGgAwIBAgIUZYD30F0sJl7HqxE7gAequtxk/HowDQYJKoZIhvcNAQEL
[...]
    -----END CERTIFICATE-----
    -----BEGIN PRIVATE KEY-----
    MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDvVbuB0Scz42bj
[...]
    bk65iLoLrUSkxMDi46qTAs5K
    -----END PRIVATE KEY-----
- name: UPDATE_STATUS
  value: "true"
objects:
# a scoped router
- apiVersion: v1
  kind: Pod
  metadata:
    name: router-scoped
    labels:
      test: router-scoped
  spec:
    terminationGracePeriodSeconds: 1
    containers:
    - name: router
      image: ${IMAGE}
      imagePullPolicy: IfNotPresent
      env:
      - name: POD_NAMESPACE
        valueFrom:
          fieldRef:
            fieldPath: metadata.namespace
      - name: DEFAULT_CERTIFICATE
        value: |-
          ${DEFAULT_CERTIFICATE}
      args:
      - "--name=${ROUTER_NAME}"
      - "--namespace=$(POD_NAMESPACE)"
      - "--update-status=${UPDATE_STATUS}"
      - "-v=4"
      - "--labels=select=first"
      - "--stats-port=1936"
      - "--metrics-type=haproxy"
      hostNetwork: false
      ports:
      - containerPort: 80
      - containerPort: 443
      - containerPort: 1936
        name: stats
        protocol: TCP
      readinessProbe:
        initialDelaySeconds: 10
        httpGet:
          path: /healthz/ready
          port: 1936
    serviceAccountName: default
